apply CSS updates

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <span class="name"> Dylan Martyn</span>
     <nav>
       <ul>
-        <li><a href="aboutme"a>About Me</li>
-        <li><a href="services"a>Services</li>
-        <li><a href="my-work"a>My Work</li>
-        <li><a href="contact"a>Contact Me</li>     
+        <li><a href="#aboutme">About Me</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#my-work">My Work</a></li>
+        <li><a href="#contact">Contact Me</a></li>     
       </ul>
     </nav>
-    </header>
-    </div>
+  </header>
+</div>
 
   <main>
     <div class="background">
@@ -117,7 +117,7 @@
       <div class="wrapper"> 
       <div class="mycontact">
         <h2>I craft brands, websites, and experiences with great attention to detail & determination to tell your story.</h2>
-        <p>Interested in working together? Email me at yourname@email.com or check out more of my work on social media.</p>
+        <p>Interested in working together? Email me at dylanmartyn@gmail.com or check out more of my work on social media.</p>
         <ul class="icons">
           <li><a href="https://instagram.com" aria-label="click here to vist my Instagram page"> <img src="/images/instagram.svg" alt=""></a></li> <li><a href="https://facebook.com" aria-label="click here to visit my Facebook page"> <img src="/images/facebook.svg" alt="">
           </a></li> <li><a href="https://twitter.com" aria-label="click here to visit my Twitter page"> <img src="/images/twitter.svg" alt=""></a></li> 
