--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>I am passionate about typography, layout design, and branding. I have also had the opportunity to experiment with other areas of design, such as motion graphics and web design.</p>
         </div>
 
-        <img src="/images/bio-pic.png" alt="selfportrait">
+        <img src="images/bio-pic.png" alt="selfportrait">
         </div>
     </section>
 
