HTML and CSS checker updates

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
  </style>
 </head>
 <body>
-  </body>
-</html>
 <div class="background">
   <header class= "wrapper">
     <span class="name"> Dylan Martyn</span>
@@ -128,33 +126,11 @@
   </main>
       <div class="background">
         <footer class="wrapper">
-          <p>&copy Dylan Martyn 2023</p>
+          <p>&copy; Dylan Martyn 2023</p>
         </footer>
       </div>
     </body>
   </html>
-        
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </main>
 
 
